--- a/BarbershopTech/UI/Reportes/Turnos.rdlc
+++ b/BarbershopTech/UI/Reportes/Turnos.rdlc
@@ -41,8 +41,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox2</rd:DefaultName>
-        <Top>0.29531cm</Top>
-        <Left>11.75427cm</Left>
+        <Left>8.06365cm</Left>
         <Height>0.6cm</Height>
         <Width>3.69062cm</Width>
         <Style>
@@ -535,7 +534,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>DataSetTurnos</DataSetName>
-        <Top>2.53683cm</Top>
+        <Top>1.25306cm</Top>
         <Left>1.75427cm</Left>
         <Height>1.2cm</Height>
         <Width>17.5cm</Width>
@@ -546,6 +545,30 @@
           </Border>
         </Style>
       </Tablix>
+      <Line Name="Line1">
+        <Top>0.77639cm</Top>
+        <Left>1.75427cm</Left>
+        <Height>0cm</Height>
+        <Width>17.5cm</Width>
+        <ZIndex>2</ZIndex>
+        <Style>
+          <Border>
+            <Style>Solid</Style>
+          </Border>
+        </Style>
+      </Line>
+      <Line Name="Line2">
+        <Top>7.9816cm</Top>
+        <Left>1.75427cm</Left>
+        <Height>0cm</Height>
+        <Width>17.87042cm</Width>
+        <ZIndex>3</ZIndex>
+        <Style>
+          <Border>
+            <Style>Solid</Style>
+          </Border>
+        </Style>
+      </Line>
     </ReportItems>
     <Height>3.82292in</Height>
     <Style>
@@ -554,10 +577,10 @@
       </Border>
     </Style>
   </Body>
-  <Width>10.70833in</Width>
+  <Width>8.51041in</Width>
   <Page>
     <PageHeader>
-      <Height>2.75167cm</Height>
+      <Height>2.71708cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -565,7 +588,7 @@
           <Source>Embedded</Source>
           <Value>report</Value>
           <Sizing>FitProportional</Sizing>
-          <Left>9.05677cm</Left>
+          <Left>5.75073cm</Left>
           <Height>2.71708cm</Height>
           <Width>8.50354cm</Width>
           <Style>
@@ -581,16 +604,6 @@
         </Border>
       </Style>
     </PageHeader>
-    <PageFooter>
-      <Height>2.54cm</Height>
-      <PrintOnFirstPage>true</PrintOnFirstPage>
-      <PrintOnLastPage>true</PrintOnLastPage>
-      <Style>
-        <Border>
-          <Style>None</Style>
-        </Border>
-      </Style>
-    </PageFooter>
     <PageHeight>29.7cm</PageHeight>
     <PageWidth>21cm</PageWidth>
     <LeftMargin>2cm</LeftMargin>
